Parser fails to revert some state after parsing expression and object literals. https://bugs.webkit.org/show_bug.cgi?id=83236

Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

Reset left hand side counter after parsing the literals.

* parser/Parser.cpp:
(JSC::::parseObjectLiteral):
(JSC::::parseStrictObjectLiteral):
(JSC::::parseArrayLiteral):

LayoutTests:

Add more parser test cases.

* fast/js/parser-syntax-check-expected.txt:
* fast/js/script-tests/parser-syntax-check.js:

Canonical link: https://commits.webkit.org/100606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113270 268f45cc-cd09-0410-ab3c-d52691b4dbfc